--- a/qtdesignerLogin.ui
+++ b/qtdesignerLogin.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>300</width>
-    <height>190</height>
+    <height>245</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>300</width>
-    <height>190</height>
+    <height>245</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>300</width>
-    <height>190</height>
+    <height>245</height>
    </size>
   </property>
   <property name="font">
@@ -46,7 +46,9 @@
    <bool>true</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">QDialog{
+	background-color:#676DD7	
+}</string>
   </property>
   <property name="sizeGripEnabled">
    <bool>false</bool>
@@ -57,21 +59,30 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>135</y>
-     <width>200</width>
-     <height>40</height>
+     <x>0</x>
+     <y>190</y>
+     <width>300</width>
+     <height>55</height>
     </rect>
    </property>
    <property name="palette">
     <palette>
      <active>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>217</red>
-         <green>235</green>
-         <blue>240</blue>
+         <red>53</red>
+         <green>59</green>
+         <blue>174</blue>
         </color>
        </brush>
       </colorrole>
@@ -81,17 +92,62 @@
          <red>208</red>
          <green>227</green>
          <blue>227</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Text">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>53</red>
+         <green>59</green>
+         <blue>174</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>53</red>
+         <green>59</green>
+         <blue>174</blue>
         </color>
        </brush>
       </colorrole>
      </active>
      <inactive>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>217</red>
-         <green>235</green>
-         <blue>240</blue>
+         <red>53</red>
+         <green>59</green>
+         <blue>174</blue>
         </color>
        </brush>
       </colorrole>
@@ -101,17 +157,62 @@
          <red>208</red>
          <green>227</green>
          <blue>227</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Text">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>53</red>
+         <green>59</green>
+         <blue>174</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>53</red>
+         <green>59</green>
+         <blue>174</blue>
         </color>
        </brush>
       </colorrole>
      </inactive>
      <disabled>
+      <colorrole role="WindowText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>217</red>
-         <green>235</green>
-         <blue>240</blue>
+         <red>53</red>
+         <green>59</green>
+         <blue>174</blue>
         </color>
        </brush>
       </colorrole>
@@ -121,6 +222,42 @@
          <red>208</red>
          <green>227</green>
          <blue>227</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Text">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="ButtonText">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>255</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Base">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>53</red>
+         <green>59</green>
+         <blue>174</blue>
+        </color>
+       </brush>
+      </colorrole>
+      <colorrole role="Window">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>53</red>
+         <green>59</green>
+         <blue>174</blue>
         </color>
        </brush>
       </colorrole>
@@ -130,7 +267,7 @@
    <property name="font">
     <font>
      <family>Verdana</family>
-     <pointsize>12</pointsize>
+     <pointsize>14</pointsize>
      <weight>50</weight>
      <bold>false</bold>
     </font>
@@ -145,10 +282,16 @@
     <bool>false</bool>
    </property>
    <property name="styleSheet">
-    <string notr="true"/>
+    <string notr="true">QPushButton{
+	color:white;
+	background-color:#353BAE;	
+}
+QPushButton:hover{
+	background-color:#3e44b7;	
+}</string>
    </property>
    <property name="text">
-    <string>Sign In</string>
+    <string>Войти</string>
    </property>
    <property name="autoDefault">
     <bool>false</bool>
@@ -161,10 +304,16 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>35</y>
+     <y>70</y>
      <width>200</width>
-     <height>25</height>
+     <height>30</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Verdana</family>
+     <pointsize>11</pointsize>
+    </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit{
@@ -179,10 +328,16 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>95</y>
+     <y>133</y>
      <width>200</width>
-     <height>25</height>
+     <height>30</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Verdana</family>
+     <pointsize>11</pointsize>
+    </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit{
@@ -203,7 +358,7 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>10</y>
+     <y>45</y>
      <width>300</width>
      <height>15</height>
     </rect>
@@ -211,13 +366,16 @@
    <property name="font">
     <font>
      <family>Verdana</family>
-     <pointsize>11</pointsize>
+     <pointsize>14</pointsize>
      <weight>50</weight>
      <bold>false</bold>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">QWidget{color:white;}</string>
+   </property>
    <property name="text">
-    <string>email</string>
+    <string>логин</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
@@ -227,9 +385,9 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>65</y>
+     <y>100</y>
      <width>300</width>
-     <height>20</height>
+     <height>30</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -241,16 +399,63 @@
    <property name="font">
     <font>
      <family>Verdana</family>
-     <pointsize>11</pointsize>
+     <pointsize>14</pointsize>
      <weight>50</weight>
      <bold>false</bold>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">QWidget{color:white;}</string>
+   </property>
    <property name="text">
-    <string>password</string>
+    <string>пароль</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="closeButton">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>0</y>
+     <width>40</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Verdana</family>
+     <pointsize>16</pointsize>
+     <weight>50</weight>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="layoutDirection">
+    <enum>Qt::LeftToRight</enum>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {	
+padding-bottom: 0.4em;
+background-color:#3F45B0;
+color:white
+}
+QPushButton:hover {
+padding-bottom: 0.4em;
+background-color:#3F4283;
+}</string>
+   </property>
+   <property name="text">
+    <string>x</string>
+   </property>
+   <property name="autoDefault">
+    <bool>false</bool>
+   </property>
+   <property name="default">
+    <bool>false</bool>
    </property>
   </widget>
  </widget>
