--- a/qtdesigner.ui
+++ b/qtdesigner.ui
@@ -12,8 +12,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>480</height>
+    <width>930</width>
+    <height>441</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -40,13 +40,18 @@
   <property name="windowTitle">
    <string>Message sender</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QWidget{
+	background-color:#d7ecf4
+}</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="sendButton">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>400</y>
-      <width>580</width>
+      <x>600</x>
+      <y>160</y>
+      <width>320</width>
       <height>40</height>
      </rect>
     </property>
@@ -56,8 +61,18 @@
       <pointsize>12</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+	color:white;
+	background-color:#5d9700;	
+}
+QPushButton:hover{
+	background-color:#436d00;	
+}
+QPushButton:focus{outline: none;}</string>
+    </property>
     <property name="text">
-     <string>Send</string>
+     <string>Рассылка</string>
     </property>
     <property name="autoDefault">
      <bool>false</bool>
@@ -67,9 +82,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>210</y>
+      <y>10</y>
       <width>580</width>
-      <height>180</height>
+      <height>190</height>
      </rect>
     </property>
     <property name="font">
@@ -78,17 +93,23 @@
       <pointsize>10</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QTextEdit{
+	border:none;
+	background-color:white;
+}</string>
+    </property>
     <property name="placeholderText">
-     <string>Enter your text</string>
+     <string>Введите текст сообщения</string>
     </property>
    </widget>
    <widget class="QListWidget" name="listWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
-      <width>580</width>
-      <height>192</height>
+      <y>210</y>
+      <width>450</width>
+      <height>190</height>
      </rect>
     </property>
     <property name="font">
@@ -96,6 +117,110 @@
       <family>Verdana</family>
       <pointsize>10</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QListWidget{
+	border:none;
+	background-color:white;
+}</string>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="listWidget_2">
+    <property name="geometry">
+     <rect>
+      <x>470</x>
+      <y>210</y>
+      <width>450</width>
+      <height>190</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Verdana</family>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QListWidget{
+	border:none;
+	background-color:white;
+}</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="findButton">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>110</y>
+      <width>320</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Verdana</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+	background-color:#cbd5d8;
+}</string>
+    </property>
+    <property name="text">
+     <string>Поиск</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="cancelButton">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>60</y>
+      <width>320</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Verdana</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+	background-color:#cbd5d8;
+}</string>
+    </property>
+    <property name="text">
+     <string>Отмена рассылки</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="closeButton">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>10</y>
+      <width>320</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Verdana</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {	
+background-color:#d2374a;
+color:white
+}
+QPushButton:hover {
+background-color:#b22e3e;
+}</string>
+    </property>
+    <property name="text">
+     <string>Закрыть</string>
     </property>
    </widget>
   </widget>
@@ -104,7 +229,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>600</width>
+     <width>930</width>
      <height>21</height>
     </rect>
    </property>
