--- a/error.ui
+++ b/error.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>300</width>
+    <width>200</width>
     <height>120</height>
    </rect>
   </property>
@@ -18,7 +18,7 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>300</width>
+    <width>200</width>
     <height>120</height>
    </size>
   </property>
@@ -48,6 +48,7 @@
   <property name="styleSheet">
    <string notr="true">QWidget{
 	background-color:#d2374a;
+border:none;
 }</string>
   </property>
   <property name="sizeGripEnabled">
@@ -59,10 +60,10 @@
   <widget class="QPushButton" name="closeButton">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>0</x>
      <y>70</y>
-     <width>100</width>
-     <height>40</height>
+     <width>200</width>
+     <height>50</height>
     </rect>
    </property>
    <property name="font">
@@ -109,14 +110,14 @@ outline:none;
     <rect>
      <x>0</x>
      <y>20</y>
-     <width>300</width>
+     <width>200</width>
      <height>30</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Verdana</family>
-     <pointsize>24</pointsize>
+     <pointsize>14</pointsize>
      <weight>50</weight>
      <bold>false</bold>
     </font>
@@ -127,7 +128,7 @@ color:white;
 }</string>
    </property>
    <property name="text">
-    <string>Ошибка ввода!</string>
+    <string>Ошибка ввода</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
