--- a/qtdesigner.ui
+++ b/qtdesigner.ui
@@ -13,7 +13,7 @@
     <x>0</x>
     <y>0</y>
     <width>930</width>
-    <height>623</height>
+    <height>675</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -268,6 +268,71 @@ background-color:#b22e3e;
     </property>
     <property name="text">
      <string>Закрыть</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="addList">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>590</y>
+      <width>40</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="font">
+     <font>
+      <family>Verdana</family>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="toolTip">
+     <string>Сохранить список</string>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+	background-color:white;
+border:none;
+}
+QPushButton:hover{
+	background-color:#f2f6fc;
+}</string>
+    </property>
+    <property name="text">
+     <string>+</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>710</x>
+      <y>590</y>
+      <width>211</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Verdana</family>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+	background-color:white;
+border:none;
+}
+QPushButton:hover{
+	background-color:#f2f6fc;
+}</string>
+    </property>
+    <property name="text">
+     <string>Загрузить список</string>
     </property>
    </widget>
   </widget>
