--- a/qtdesigner.ui
+++ b/qtdesigner.ui
@@ -13,7 +13,7 @@
     <x>0</x>
     <y>0</y>
     <width>930</width>
-    <height>675</height>
+    <height>624</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -150,13 +150,13 @@ border:none;background-color:#acd8e8;}</string>
      <enum>QAbstractItemView::ScrollPerItem</enum>
     </property>
    </widget>
-   <widget class="QListWidget" name="listWidget_2">
+   <widget class="QListWidget" name="sendListWidget">
     <property name="geometry">
      <rect>
       <x>470</x>
       <y>240</y>
       <width>450</width>
-      <height>340</height>
+      <height>341</height>
      </rect>
     </property>
     <property name="font">
@@ -270,11 +270,11 @@ background-color:#b22e3e;
      <string>Закрыть</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="addList">
+   <widget class="QPushButton" name="addListButton">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>590</y>
+      <x>670</x>
+      <y>540</y>
       <width>40</width>
       <height>40</height>
      </rect>
@@ -307,11 +307,11 @@ QPushButton:hover{
      <string>+</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="LoadListsButton">
     <property name="geometry">
      <rect>
       <x>710</x>
-      <y>590</y>
+      <y>540</y>
       <width>211</width>
       <height>40</height>
      </rect>
