--- a/selectLists.ui
+++ b/selectLists.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>300</width>
-    <height>175</height>
+    <height>400</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>300</width>
-    <height>175</height>
+    <height>400</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>300</width>
-    <height>175</height>
+    <height>400</height>
    </size>
   </property>
   <property name="font">
@@ -46,7 +46,7 @@
    <bool>false</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true">QWidget{
+   <string notr="true">QDialog{
 	background-color:#d7ecf4;
 }</string>
   </property>
@@ -60,7 +60,7 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>120</y>
+     <y>345</y>
      <width>300</width>
      <height>55</height>
     </rect>
@@ -293,7 +293,7 @@ QPushButton:hover{
 QPushButton:focus{outline: none;}</string>
    </property>
    <property name="text">
-    <string>Поиск</string>
+    <string>Выбрать</string>
    </property>
    <property name="autoDefault">
     <bool>false</bool>
@@ -305,59 +305,17 @@ QPushButton:focus{outline: none;}</string>
     <bool>false</bool>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>75</y>
-     <width>240</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Verdana</family>
-     <pointsize>11</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QLineEdit{
-	border:none;
-	background-color:white;
-}</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-   <property name="placeholderText">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QListWidget" name="listWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>39</y>
+     <y>0</y>
      <width>300</width>
-     <height>30</height>
+     <height>351</height>
     </rect>
    </property>
-   <property name="font">
-    <font>
-     <family>Verdana</family>
-     <pointsize>14</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
    <property name="styleSheet">
-    <string notr="true"/>
-   </property>
-   <property name="text">
-    <string>Какие группы ищем?</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
+    <string notr="true">border:none;</string>
    </property>
   </widget>
   <widget class="QPushButton" name="closeButton">
@@ -386,7 +344,7 @@ QPushButton:focus{outline: none;}</string>
    <property name="styleSheet">
     <string notr="true">QPushButton {	
 padding-bottom: 0.4em;
-background-color:#d7ecf4;
+background-color:white;
 border:none;	
 }
 QPushButton:hover {
