--- a/qtdesigner.ui
+++ b/qtdesigner.ui
@@ -13,7 +13,7 @@
     <x>0</x>
     <y>0</y>
     <width>930</width>
-    <height>624</height>
+    <height>631</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -51,7 +51,7 @@
     <property name="geometry">
      <rect>
       <x>600</x>
-      <y>180</y>
+      <y>190</y>
       <width>320</width>
       <height>50</height>
      </rect>
@@ -84,7 +84,7 @@ QPushButton:focus{outline: none;}</string>
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>30</y>
+      <y>40</y>
       <width>580</width>
       <height>200</height>
      </rect>
@@ -111,7 +111,7 @@ QPushButton:focus{outline: none;}</string>
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>240</y>
+      <y>250</y>
       <width>450</width>
       <height>340</height>
      </rect>
@@ -154,9 +154,9 @@ border:none;background-color:#acd8e8;}</string>
     <property name="geometry">
      <rect>
       <x>470</x>
-      <y>240</y>
+      <y>250</y>
       <width>450</width>
-      <height>341</height>
+      <height>340</height>
      </rect>
     </property>
     <property name="font">
@@ -189,7 +189,7 @@ background-color: white;}</string>
     <property name="geometry">
      <rect>
       <x>600</x>
-      <y>130</y>
+      <y>140</y>
       <width>320</width>
       <height>50</height>
      </rect>
@@ -217,7 +217,7 @@ QPushButton:hover{
     <property name="geometry">
      <rect>
       <x>600</x>
-      <y>80</y>
+      <y>90</y>
       <width>320</width>
       <height>50</height>
      </rect>
@@ -241,40 +241,11 @@ QPushButton:hover{
      <string>Выбрать всё</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="closeButton">
-    <property name="geometry">
-     <rect>
-      <x>600</x>
-      <y>30</y>
-      <width>320</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Verdana</family>
-      <pointsize>14</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {	
-background-color:#d2374a;
-color:white;
-border:none;
-}
-QPushButton:hover {
-background-color:#b22e3e;
-}</string>
-    </property>
-    <property name="text">
-     <string>Закрыть</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="addListButton">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>540</y>
+      <x>880</x>
+      <y>550</y>
       <width>40</width>
       <height>40</height>
      </rect>
@@ -310,10 +281,10 @@ QPushButton:hover{
    <widget class="QPushButton" name="LoadListsButton">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>540</y>
-      <width>211</width>
-      <height>40</height>
+      <x>600</x>
+      <y>40</y>
+      <width>321</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -333,6 +304,101 @@ QPushButton:hover{
     </property>
     <property name="text">
      <string>Загрузить список</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="rollButton">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>0</y>
+      <width>40</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Verdana</family>
+      <pointsize>16</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {	
+padding-bottom: 0.4em;
+background-color:#d7ecf4;
+border:none;	
+}
+QPushButton:hover {
+padding-bottom: 0.4em;
+background-color:#b7e3f4;
+}
+QPushButton:focus {
+outline:none;
+}</string>
+    </property>
+    <property name="text">
+     <string>-</string>
+    </property>
+    <property name="autoDefault">
+     <bool>false</bool>
+    </property>
+    <property name="default">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="closeButton">
+    <property name="geometry">
+     <rect>
+      <x>890</x>
+      <y>0</y>
+      <width>40</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Verdana</family>
+      <pointsize>16</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {	
+padding-bottom: 0.4em;
+background-color:#d7ecf4;
+border:none;	
+}
+QPushButton:hover {
+padding-bottom: 0.4em;
+background-color:#d2374a;
+color:white;
+}
+QPushButton:focus {
+outline:none;
+}</string>
+    </property>
+    <property name="text">
+     <string>x</string>
+    </property>
+    <property name="autoDefault">
+     <bool>false</bool>
+    </property>
+    <property name="default">
+     <bool>false</bool>
     </property>
    </widget>
   </widget>
