--- a/ListsSelect.ui
+++ b/ListsSelect.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Login</class>
- <widget class="QDialog" name="Login">
+ <class>AllLists</class>
+ <widget class="QDialog" name="AllLists">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>300</width>
-    <height>245</height>
+    <height>400</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>300</width>
-    <height>245</height>
+    <height>400</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>300</width>
-    <height>245</height>
+    <height>400</height>
    </size>
   </property>
   <property name="font">
@@ -37,7 +37,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>Sign in</string>
+   <string/>
   </property>
   <property name="whatsThis">
    <string notr="true"/>
@@ -46,8 +46,8 @@
    <bool>false</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true">QWidget{
-	background-color:#d7ecf4
+   <string notr="true">QDialog{
+	background-color:#d7ecf4;
 }</string>
   </property>
   <property name="sizeGripEnabled">
@@ -60,7 +60,7 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>190</y>
+     <y>345</y>
      <width>300</width>
      <height>55</height>
     </rect>
@@ -293,7 +293,7 @@ QPushButton:hover{
 QPushButton:focus{outline: none;}</string>
    </property>
    <property name="text">
-    <string>Войти</string>
+    <string>Выбрать</string>
    </property>
    <property name="autoDefault">
     <bool>false</bool>
@@ -305,120 +305,17 @@ QPushButton:focus{outline: none;}</string>
     <bool>false</bool>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
-   <property name="geometry">
-    <rect>
-     <x>50</x>
-     <y>70</y>
-     <width>200</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Verdana</family>
-     <pointsize>11</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QLineEdit{
-	border:none;
-	background-color:white;
-}</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_2">
-   <property name="geometry">
-    <rect>
-     <x>50</x>
-     <y>133</y>
-     <width>200</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Verdana</family>
-     <pointsize>11</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QLineEdit{
-	border:none;
-	background-color:white;
-}</string>
-   </property>
-   <property name="inputMethodHints">
-    <set>Qt::ImhHiddenText|Qt::ImhNoAutoUppercase|Qt::ImhNoPredictiveText|Qt::ImhSensitiveData</set>
-   </property>
-   <property name="echoMode">
-    <enum>QLineEdit::Password</enum>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QListWidget" name="listWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>45</y>
+     <y>0</y>
      <width>300</width>
-     <height>15</height>
+     <height>351</height>
     </rect>
    </property>
-   <property name="font">
-    <font>
-     <family>Verdana</family>
-     <pointsize>14</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
    <property name="styleSheet">
-    <string notr="true"/>
-   </property>
-   <property name="text">
-    <string>Логин</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>100</y>
-     <width>300</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
-   <property name="font">
-    <font>
-     <family>Verdana</family>
-     <pointsize>14</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true"/>
-   </property>
-   <property name="text">
-    <string>Пароль</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
+    <string notr="true">border:none;</string>
    </property>
   </widget>
   <widget class="QPushButton" name="closeButton">
@@ -447,7 +344,7 @@ QPushButton:focus{outline: none;}</string>
    <property name="styleSheet">
     <string notr="true">QPushButton {	
 padding-bottom: 0.4em;
-background-color:#d7ecf4;
+background-color:white;
 border:none;	
 }
 QPushButton:hover {
