--- a/selectLists.ui
+++ b/selectLists.ui
@@ -46,8 +46,10 @@
    <bool>false</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true">QDialog{
-	background-color:#d7ecf4;
+   <string notr="true">QWidget
+{
+	background-color:white;
+	border: 1px solid #d7ecf4;
 }</string>
   </property>
   <property name="sizeGripEnabled">
@@ -308,11 +310,17 @@ QPushButton:focus{outline: none;}</string>
   <widget class="QListWidget" name="listWidget">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>300</width>
-     <height>351</height>
+     <x>39</x>
+     <y>1</y>
+     <width>221</width>
+     <height>344</height>
     </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
    </property>
    <property name="font">
     <font>
@@ -321,9 +329,10 @@ QPushButton:focus{outline: none;}</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">
+    <string notr="true">QListWidget::item { margin: 0.2em;}
 QListWidget{
     background-color:white;
+border:none;
 }
 QScrollBar:vertical {border: none;
 background-color: white;}
@@ -333,6 +342,9 @@ QScrollBar:horizontal {border: none;
 background-color: white;}
 QScrollBar::handle:horizontall {
 border:none;background-color:#acd8e8;}</string>
+   </property>
+   <property name="lineWidth">
+    <number>0</number>
    </property>
   </widget>
   <widget class="QPushButton" name="closeButton">
